--- a/00_env_init.Rmd
+++ b/00_env_init.Rmd
@@ -7,8 +7,9 @@ output: pdf_document
 
 ```{r}
 library(pacman)
-#pacman::p_load(tidyverse, janitor, stringr,  skimr,viridis, reshape2, kableExtra, stringr, tidygeocoder)
+pacman::p_load(tidyverse, janitor, stringr,  skimr,viridis, reshape2, kableExtra, stringr, tidygeocoder)
 pacman::p_load(tidyverse, parallel, raster, doParallel, sf, lubridate)
+library(tidyverse, appliedepi)
 ```
 
 ```{r}
